# nixie-clock

./: .gitmodules  LICENSE  README.md
case/: nixie_clock_case.f3d  nixie_clock_case_lower.stl
firmware/: .gitignore  Dockerfile  Makefile  i2c.c  i2c.h  main.c  platformio.ini
firmware/include/: i2c.h  rtc.h
firmware/src/: i2c.c  main.c
firmware/v1/: rtc.c  rtc.h
firmware/v2/: CMakeLists.txt  blink.pio  ds1302.c  ds1302.h  hello.c  main.c  spi.pio
firmware_esp32/: .gitignore  README.md  platformio.ini
firmware_esp32/include/: example_secret_wifi.h  ota.h  rtc.h  sync.h  tubes.h
firmware_esp32/src/: main.cpp  ota.cpp  rtc.cpp  sync.cpp  tubes.cpp
pcb/: .gitignore  LICENSE.txt
pcb/back/: fp-lib-table  nixie_clock_back-cache.lib  nixie_clock_back-rescue.lib  nixie_clock_back.kicad_pcb  nixie_clock_back.kicad_prl  nixie_clock_back.kicad_pro  nixie_clock_back.kicad_sch  nixie_clock_back.pro  nixie_clock_back.sch  sym-lib-table
pcb/back_v2/: fp-lib-table  nixie_back_v2.kicad_pcb  nixie_back_v2.kicad_prl  nixie_back_v2.kicad_pro  nixie_back_v2.kicad_sch  sym-lib-table
pcb/back_v3/: nixie_back_v3.kicad_pcb  nixie_back_v3.kicad_prl  nixie_back_v3.kicad_pro  nixie_back_v3.kicad_sch
pcb/front/: nixie_clock_front-cache.lib  nixie_clock_front.kicad_pcb  nixie_clock_front.kicad_prl  nixie_clock_front.kicad_pro  nixie_clock_front.pro  nixie_clock_front.sch  nixie_clock_front.step  sym-lib-table
pcb/lib/: nixie_clock.lib
shell/v1/: nixie_clock_case_upper.stl
shell/v2/: lower.stl  shell_v2.f3d  stand.stl  upper.stl
shell/v3/: back.stl  front.stl  insert.stl
(+5 files in other folders)
